--- a/src/main/resources/fxml/graph.fxml
+++ b/src/main/resources/fxml/graph.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.chart.*?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-
+<?import javafx.scene.layout.VBox?>
 <VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.Controller">
   <children>
     <MenuBar>
@@ -17,6 +13,8 @@
             <MenuItem mnemonicParsing="false" onAction="#plotAudio" text="Plot audio..." />
             <MenuItem mnemonicParsing="false" onAction="#plotDefault" text="Plot default" />
             <MenuItem mnemonicParsing="false" onAction="#plotCosine" text="Plot cosine" />
+            <MenuItem mnemonicParsing="false" onAction="#plotFFT" text="Plot FFT" />
+            <MenuItem mnemonicParsing="false" onAction="#plotMelFilterBank" text="Plot Mel filter bank" />
             <MenuItem mnemonicParsing="false" onAction="#clear" text="Clear" />
             <MenuItem mnemonicParsing="false" text="Close" />
           </items>
